lessons12/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lessons12-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lessons12
  template:
    metadata:
      labels:
        app: lessons12
    spec:
      containers:
        - name: lessons12
          image: alexdolg/otus:lesson12-otus
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: metrics
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /health
              port: 8000
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /health
              port: 8000
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: lessons12-cm
            items:
              - key: application.yml
                path: application.yml
